[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/Chicken/ChickenIdle.png" type="Texture" id=1]
[ext_resource path="res://actors/chicken/chicken_fsm.gd" type="Script" id=2]
[ext_resource path="res://actors/chicken/chicken.gd" type="Script" id=3]
[ext_resource path="res://actors/chicken/chicken_aim.gd" type="Script" id=4]
[ext_resource path="res://actors/chicken/chicken_reach.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.01159
height = 8.05679

[sub_resource type="CircleShape2D" id=2]
radius = 54.6823

[node name="chicken" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="chicken_fsm" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.44545, 0 )
texture = ExtResource( 1 )
flip_h = true
hframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.445452, 4.12041 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="chicken_aim" type="Area2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="chicken_aim"]
position = Vector2( -4.28745, -2.61702 )
polygon = PoolVector2Array( 12.6453, -5.61861, 15.3737, -0.774351, 15.2066, 5.18353, 13.1464, 10.2505, 20.4407, 1.84266 )

[node name="CollisionPolygon2D2" type="Polygon2D" parent="chicken_aim"]
position = Vector2( -4.28745, -2.61702 )
polygon = PoolVector2Array( 12.6453, -5.61861, 15.3737, -0.774351, 15.2066, 5.18353, 13.1464, 10.2505, 20.4407, 1.84266 )

[node name="chicken_reach" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="chicken_reach"]
shape = SubResource( 2 )
